apps/iris-public/manifest/service--iridescence.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iridescence
  name: iridescence
spec:
  type: ClusterIP
  ipFamilies:
  - IPv4
  ports:
  - name: 80-3000
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: iridescence
