apps/iris-public/manifest/service--iris-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iris-app
  name: iris-app
spec:
  type: ClusterIP
  ipFamilies:
  - IPv4
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: iris-app
