apps/iris-public/manifest/deployment.apps--cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      pod: cloudflared
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        pod: cloudflared
    spec:
      containers:
      - command:
        - cloudflared
        - tunnel
        - --no-autoupdate
        - --loglevel
        - info
        - --metrics
        - 0.0.0.0:2000
        - run
        image: cloudflare/cloudflared:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /ready
            port: 2000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: cloudflared
      restartPolicy: Always
      securityContext:
        sysctls:
        - name: net.ipv4.ping_group_range
          value: 65532 65532
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared-establish-cloudflare
  namespace: iris-public
spec:
  podSelector:
    matchLabels:
      pod: cloudflared
  policyTypes:
    - Egress
  egress:
    - ports:
      - protocol: TCP
        port: 7844
      - protocol: UDP
        port: 7844
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared-accept-iris
  namespace: iris-public
spec:
  podSelector:
    matchLabels:
      pod: cloudflared
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: iris-app
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared-accept-iridescence
  namespace: iris-public
spec:
  podSelector:
    matchLabels:
      pod: cloudflared
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: iridescence
      ports:
        - protocol: TCP
          port: 3000
