apps/iris-public/manifest/deployment.apps--iridescence.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iridescence
  name: iridescence
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: iridescence
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: iridescence
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: iridescence-configuration
        image: ghcr.io/pastel-biota/iridescence-public:v4.0.1
        imagePullPolicy: Always
        name: iridescence
        ports:
        - containerPort: 3000
          protocol: TCP
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: docker-ghcr-creds
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iridescence-receive-public-http-via-traefik
  namespace: iris-public
spec:
  podSelector:
    matchLabels:
      app: iridescence
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            pod: cloudflared
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iridescence-request-internal-ssr
  namespace: iris-public
spec:
  podSelector:
    matchLabels:
      app: iridescence
  policyTypes:
    - Egress
  egress:
    # FIXME: probably I should request using *.svc.cluster.local
    - ports:
        - port: 443
          protocol: TCP
